# vsc-be

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  build.sh  compose.dev.yaml  compose.yaml  entrypoint.sh  manage.py  mypy.ini  pyproject.toml  schema.dot  schema.er
accounts/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_staff_role.py
analytics/: constants.py  serializers.py  services.py  urls.py  views.py
auditing/: apps.py  context.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
auditing/migrations/: 0001_initial.py  0002_apiauditlog_modelauditlog_delete_auditlog_and_more.py
core/: authorization.py  constants.py  decorators.py  exceptions.py  metrics.py  utils.py
core/helpers/: api_response.py  base_serializer.py  image_upload.py  image_utils.py  pagination.py  param_serializer.py  query_filters.py  query_params.py  security.py
inventory/: models.py  serializers.py  services.py  urls.py  views.py
monitoring/loki/: config.yml
nginx/: nginx.conf
orders/: models.py  serializers.py  services.py  urls.py  views.py
production/: models.py  serializers.py  services.py  urls.py  views.py
scripts/: _backup_common.sh  backup_drf_to_mac.sh  backup_health_report.sh  backup_to_gdrive.service  backup_to_gdrive.sh  backup_to_gdrive.timer  create_admin.sql  create_admin_direct.py  local_retention_prune.sh  media_checksum_audit.sh  populate_master_data.py  preflight_check.sh  provision_postgres.sh  restore_db_from_snapshot.sh  restore_local_from_snapshot.sh  restore_media_from_snapshot.sh  verify_data.py  verify_restore_local.sh
vsc_be/: asgi.py  settings.py  urls.py  wsgi.py
(+25 files in other folders)
